# capacity-commitment-prover

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  README.md  rust-toolchain.toml
.github/: actionlint.yaml
.github/release-please/: config.json  manifest.json
.github/workflows/: artifact.yml  e2e.yml  lint.yml  release.yml
ccp/: Cargo.toml
ccp/src/: cpuids_handle.rs  epoch.rs  errors.rs  lib.rs  proof_cleaner.rs  proof_storage.rs  proof_storage_worker.rs  prover.rs  state_storage.rs  status.rs
ccp/src/alignment_roadmap/: mod.rs  roadmap.rs  roadmap_alignable.rs  roadmap_builder.rs  tests.rs
ccp/src/alignment_roadmap/roadmap/: actions_state.rs
ccp/src/cu/: config.rs  cu_prover.rs  errors.rs  mod.rs  running_status.rs  status.rs  tests.rs  thread_allocator.rs
ccp/src/cu/proving_thread/: api.rs  async_.rs  errors.rs  facade.rs  local_nonce.rs  messages.rs  mod.rs  state.rs  sync.rs  tests.rs  thread.rs
ccp/src/cu/proving_thread/async_/: config.rs  errors.rs  mod.rs  thread.rs
ccp/src/cu/proving_thread/messages/: async_to_sync.rs  ptt_structs.rs  sync_to_async.rs  ttp_structs.rs
ccp/src/cu/proving_thread/sync/: channels_facade.rs  errors.rs  local_nonce.rs  mod.rs  raw_proof.rs  state.rs  thread.rs  to_utility_message.rs
ccp/src/cu/proving_thread_allocation/: allocator.rs  mod.rs  round_robin_distributor.rs
ccp/src/cu/proving_thread_utils/: allocator.rs  round_robin_distributor.rs  threads_distribution_policy.rs
ccp/src/hashrate/: collector.rs  collector_by_timer.rs  errors.rs  handler.rs  hashratable.rs  hashrate_collector.rs  hashrate_entry.rs  hashrate_record.rs  hashrate_saver.rs  mod.rs  prometheus.rs  record.rs  saver.rs  sliding_collector.rs  sliding_collector_noop.rs  sliding_window_collector.rs
ccp/src/prover/: tests.rs
ccp/src/utility_thread/: errors.rs  mod.rs  proof_storage.rs  proof_storage_worker.rs  thread.rs
crates/config/: Cargo.toml
crates/config/src/: config.rs  config_loader.rs  defaults.rs  lib.rs  unresolved_config.rs
crates/config/src/tests/: default.toml  mod.rs  test-no-optimization.toml  test.toml  tests_.rs
crates/cpu-topology/: Cargo.toml
crates/cpu-topology/src/: cpu_topology.rs  errors.rs  lib.rs  thread_pinning.rs
crates/cpu-utils/: Cargo.toml
crates/cpu-utils/src/: cpu_topology.rs  errors.rs  lib.rs  pinning.rs
crates/msr/: Cargo.toml
crates/msr/src/: ccp_cpu_preset.rs  ccp_msr.rs  cpu_preset.rs  errors.rs  lib.rs  msr.rs  msr_cpu_preset.rs  msr_cpu_preset_x86_64.rs  msr_error.rs  msr_item.rs  msr_linux.rs  msr_mode.rs  msr_non_x86_64.rs  msr_other.rs  msr_x86_64.rs
crates/msr/src/linux_x86_64/: cpu_preset.rs  cpu_preset_values.rs  errors.rs  mod.rs  msr_mode.rs  msr_x86_64.rs  utils.rs
crates/msr/src/other/: errors.rs  mod.rs  msr_other.rs
crates/msr/src/state/: cpu_preset.rs  mod.rs  msr_state.rs
crates/randomx/: Cargo.toml
crates/randomx/src/: result_hash.rs
crates/rpc-client/: Cargo.toml
crates/rpc-client/src/: lib.rs  or_hex.rs
crates/rpc-server/: Cargo.toml
crates/rpc-server/src/: facade.rs  lib.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs  meet_difficulty.rs  nox_ccp_api.rs  proof.rs  types.rs
crates/shared/src/proof/: id.rs  idx.rs
crates/shared/src/types/: core.rs  cuid.rs  difficulty.rs  epoch_parameters.rs  global_nonce.rs  local_nonce.rs  result_hash.rs
crates/test-utils/: Cargo.toml
crates/test-utils/src/: lib.rs  proving_thread.rs  randomx.rs  test_values.rs  values.rs
crates/utils/: Cargo.toml
crates/utils/src/: hash.rs  lib.rs  run_utils.rs
docker/: Config.default.toml  Dockerfile  entrypoint.sh
main/: Cargo.toml  default.toml
main/examples/: README.md  README.txt  get_proofs_after.json  on_active_commitment.json  on_no_active_commitment.json
main/src/: main.rs
