[workspace]
resolver = "2"
members = [
    "ccp",
    "crates/config",
    "crates/cpu-utils",
    "crates/rpc-client",
    "crates/rpc-server",
    "crates/shared",
    "crates/test-utils",
    "crates/utils",
    "main",
]

[workspace.dependencies]
capacity-commitment-prover = { path = "./ccp", version = "0.1.0" }
cpu-utils = { path = "./crates/cpu-utils", version = "0.1.0" }
ccp-config = { path = "./crates/config", version = "0.1.0" }
ccp-randomx = "0.1.0"
ccp-randomx-types = "0.1.0"
ccp-msr = { path = "./crates/msr", version = "0.1.0" }
ccp-rpc-client = { version = "0.1.0", path = "./crates/rpc-client" }
ccp-rpc-server = { version = "0.1.0", path = "./crates/rpc-server" }
ccp-shared = { path = "./crates/shared", version = "0.1.0" }
ccp-test-utils = { path = "./crates/test-utils", version = "0.1.0" }
ccp-utils = { path = "./crates/utils", version = "0.1.0" }

async-trait = "0.1.77"
tokio = { version = "1.36", features = ["sync", "rt", "macros", "fs"] }
tokio-stream = {version = "0.1", features = ["fs"]}
futures = "0.3"

hwlocality = "1.0.0-alpha.1"
core_affinity = { git = "https://github.com/fluencelabs/core_affinity_rs" }

anyhow = "1.0"
byteorder = "1.5"
chrono = "0.4"
env_logger = "0.10"
jsonrpsee = { version = "0.21.0", features = ["client", "macros", "tokio", "server"] }
rand = "0.8"
log = "0.4"
nonempty = "0.9"
newtype_derive = "0.1"
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha3 = "0.10"
thiserror = "1.0"
tracing = "0.1.40"
test-log = "0.2.14"
