[workspace.package]
authors = ["Fluence Labs"]
edition = "2021"
repository = "https://github.com/fluencelabs/capacity-commitment-prover"
license = "Apache-2.0"

[workspace]
resolver = "2"
members = [
    "ccp",
    "crates/randomx",
    "crates/config",
    "crates/cpu-utils",
    "crates/rpc-client",
    "crates/rpc-server",
    "crates/shared",
    "crates/test-utils",
    "crates/utils",
    "main",
]

[workspace.dependencies]
capacity-commitment-prover = { path = "./ccp", version = "0.1.0" }
ccp-config = { path = "./crates/config", version = "0.1.0" }
ccp-randomx = { path = "./crates/randomx", version = "0.1.0"}
ccp-msr = { path = "./crates/msr", version = "0.1.0" }
ccp-rpc-client = { version = "0.1.0", path = "./crates/rpc-client" }
ccp-rpc-server = { version = "0.1.0", path = "./crates/rpc-server" }
ccp-shared = { path = "./crates/shared", version = "0.1.0" }
ccp-test-utils = { path = "./crates/test-utils", version = "0.1.0" }
ccp-utils = { path = "./crates/utils", version = "0.1.0" }
cpu-utils = { path = "./crates/cpu-utils", version = "0.1.0" }

async-trait = "0.1.77"
tokio = { version = "1.36", features = ["sync", "rt", "rt-multi-thread", "macros", "fs"] }
tokio-stream = {version = "0.1", features = ["fs"]}
futures = "0.3"

hwlocality = "1.0.0-alpha.1"
core_affinity = { git = "https://github.com/fluencelabs/core_affinity_rs" }

anyhow = "1.0"
byteorder = "1.5"
bitflags = "2.4"
cmake = "0.1"
clap = { version = "4.5.0", features = ["derive"] }
csv = "0.15"
chrono = "0.4"
env_logger = "0.10"
eyre = "0.6.12"
jsonrpsee = { version = "0.21.0", features = ["client", "macros", "tokio", "server"] }
rand = "0.8"
raw-cpuid = "11.0.1"
log = "0.4"
libc = "0.2"
once_cell = "1.19.0"
maplit = "1.0.2"
newtype_derive = "0.1"
nonempty = "0.9"
nix = { version = "0.27.1" , features = ["uio"] }
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha3 = "0.10"
tempdir = "0.3.7"
test-log = "0.2.14"
thiserror = "1.0"
tracing = "0.1.40"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[profile.dev.package.clap]
debug-assertions = false

[profile.release]
opt-level = 3
strip = true
lto = false
codegen-units = 1 # Reduce number of codegen units to increase optimizations
