[package]
name = "capacity-commitment-prover"
description = ""
version = "0.1.0"
authors = ["Fluence Labs"]
edition = "2021"
publish = true

[lib]
path = "src/lib.rs"
doctest = false

[dependencies]
ccp-config = { workspace = true }
ccp-randomx = { workspace = true }
ccp-shared = { workspace = true }
ccp-test-utils = { workspace = true }
ccp-utils = { workspace = true }
cpu-utils = { workspace = true }

tokio = { workspace = true }
tokio-stream = {workspace = true}
futures = { workspace = true }

anyhow = { workspace = true }
byteorder = { workspace = true }
chrono = { workspace = true }
env_logger = { workspace = true }
rand = { workspace = true }
log = {workspace = true}
nonempty = {workspace = true}
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
maplit = "1.0.2"
tempdir = "0.3.7"
tokio = { workspace = true, features = ["rt-multi-thread"] }
test-log = { workspace = true }
