[package]
name = "capacity-commitment-prover"
description = "The core project of the capacity commitment prover for the Fluence protocol"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = true

[lib]
path = "src/lib.rs"
doctest = false

[dependencies]
ccp-config.workspace = true
ccp-randomx.workspace = true
ccp-msr.workspace = true
ccp-shared.workspace = true
ccp-test-utils.workspace = true
ccp-utils.workspace = true
cpu-utils.workspace = true

tokio.workspace = true
tokio-stream.workspace = true
futures.workspace = true

anyhow.workspace = true
byteorder.workspace = true
crossterm.workspace = true
crossterm.features = ["event-stream"]
chrono.workspace = true
env_logger.workspace = true
rand.workspace = true
log.workspace = true
nonempty.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
maplit.workspace = true
tempdir.workspace = true
tokio.workspace = true
test-log.workspace = true
