[package]
name = "capacity-commitment-prover"
description = "The core project of the capacity commitment prover for the Fluence protocol"
version = "0.6.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = true

[lib]
path = "src/lib.rs"
doctest = false

[dependencies]
ccp-config.workspace = true
ccp-randomx.workspace = true
ccp-msr.workspace = true
ccp-shared.workspace = true
ccp-test-utils.workspace = true
ccp-utils.workspace = true
cpu-utils.workspace = true

tokio.workspace = true
tokio-stream.workspace = true
futures.workspace = true

crossterm.workspace = true
crossterm.features = ["event-stream"]
crossterm.optional = true

anyhow.workspace = true
byteorder.workspace = true
chrono.workspace = true
csv.workspace = true
itertools.workspace = true
rand.workspace = true
log.workspace = true
nonempty.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
thiserror.workspace = true

axum = "0.7.4"
prometheus-client = "0.22.1"
tokio-util = "0.7.10"

[dev-dependencies]
env_logger.workspace = true
maplit.workspace = true
tempdir.workspace = true
tokio.workspace = true
test-log.workspace = true
