[package]
name = "ccp-main"
version = "0.1.0"
edition = "2021"

[dependencies]
capacity-commitment-prover = { workspace = true }
ccp-config = { workspace = true }
ccp-randomx = { workspace = true }
ccp-rpc-server = { workspace = true }
ccp-shared = { workspace = true }

clap = { version = "4.5.0", features = ["derive"] }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
eyre = "0.6.12"
tracing-log = "0.2.0"

[target.'cfg(target_os = "linux")'.dependencies]
affinity = "0.1.2"
