[package]
name = "ccp-main"
description = "CCP server launcher"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = true

[dependencies]
capacity-commitment-prover.workspace = true
ccp-config.workspace = true
ccp-randomx.workspace = true
ccp-rpc-server.workspace = true
ccp-shared.workspace = true
cpu-utils.workspace = true

clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
eyre.workspace = true
tracing-log.workspace = true
