[package]
name = "ccp-config"
description = "Config for the Fluence CCP application"
version = "0.4.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = true

[lib]
path = "src/lib.rs"
doctest = false

[dependencies]
ccp-randomx.workspace = true
ccp-shared.workspace = true

config.workspace = true
eyre.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
