[package]
name = "cpu-topology"
version = "0.1.0"
description = "Contains utility functions to work with CPU"
edition = "2021"
authors = ["Fluence Labs"]
repository = "https://github.com/fluencelabs/capacity-commitment-prover"
publish = true

[dependencies]
core_affinity = { git = "https://github.com/fluencelabs/core_affinity_rs" }
hwlocality = "1.0.0-alpha.1"
newtype_derive = "0.1"
nonempty = "0.9"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
