[package]
name = "cpu-utils"
description = "Contains utility functions to work with CPU"
version = "0.5.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = true

[lib]
path = "src/lib.rs"
doctest = false

[dependencies]
ccp-shared.workspace = true

ccp_core_affinity.workspace = true
hwlocality.workspace = true
nonempty.workspace = true
serde.workspace = true
thiserror.workspace = true
