[package]
name = "ccp-msr"
description = "A library for reading and writing MSR register_idisters on x86_64 CPUs"
version = "0.3.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = true

[lib]
path = "src/lib.rs"
doctest = false

[dependencies]
cpu-utils.workspace = true

thiserror.workspace = true
nix.workspace = true
once_cell.workspace = true
raw-cpuid.workspace = true
tracing.workspace = true
