[package]
name = "ccp-msr"
description = "A library for reading and writing MSR register_idisters on x86_64 CPUs"
version = "0.6.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = true

[lib]
path = "src/lib.rs"
doctest = false

[dependencies]
ccp-config.workspace = true
ccp-shared.workspace = true

thiserror.workspace = true
nix.workspace = true
once_cell.workspace = true
raw-cpuid.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
