[package]
name = "ccp-randomx"
description = "RandomX Rust wrapper intended for the Fluence Capacity Commitment protocol"
version = "0.5.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = true

[lib]
path = "src/lib.rs"
doctest = false

[dependencies]
ccp-shared.workspace = true

bitflags.workspace = true
hex.workspace = true
libc.workspace = true
thiserror.workspace = true
serde.workspace = true

[dev-dependencies]
rand.workspace = true

[build-dependencies]
cmake.workspace = true
