[package]
name = "ccp-rpc-client"
description = "CCP RPC client"
version = "0.4.2"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = true

[lib]
path = "src/lib.rs"
doctest = false

[dependencies]
ccp-shared.workspace = true

hex.workspace = true
jsonrpsee.workspace = true
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true
