[package]
name = "ccp-rpc-server"
description = "CCP RPC server"
version = "0.7.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
path = "src/lib.rs"
doctest = false

[dependencies]
capacity-commitment-prover.workspace = true
ccp-rpc-client.workspace = true
ccp-shared.workspace = true
cpu-utils.workspace = true

async-trait.workspace = true
jsonrpsee.workspace = true
tokio.workspace = true
tracing.workspace = true
eyre.workspace = true
