[package]
name = "ccp-rpc-server"
description = "CCP RPC server"
version = "0.8.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = true

[lib]
path = "src/lib.rs"
doctest = false

[dependencies]
ccp.workspace = true
ccp-rpc-client.workspace = true
ccp-shared.workspace = true
cpu-utils.workspace = true

async-trait.workspace = true
jsonrpsee.workspace = true
tokio.workspace = true
tracing.workspace = true
eyre.workspace = true
