[package]
name = "ccp-shared"
description = "CCP shared types and definition"
version = "0.1.0"
authors = ["Fluence Labs"]
edition = "2021"

[lib]
path = "src/lib.rs"
doctest = false

[dependencies]
cpu-utils = { workspace = true }

randomx-rust-wrapper = { workspace = true }

rand = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
