[package]
name = "ccp-shared"
description = "CCP shared types and definition"
version = "0.4.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = true

[lib]
path = "src/lib.rs"
doctest = false

[dependencies]
newtype_derive.workspace = true
rand.workspace = true
hex.workspace = true
serde.workspace = true
