[package]
name = "ccp-test-utils"
description = "Various test utils for CCP"
version = "0.2.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
path = "src/lib.rs"
doctest = false

[dependencies]
ccp-shared.workspace = true
ccp-randomx.workspace = true
