[package]
name = "ccp-utils"
description = "Various utility functions for the Fluence CCP"
version = "0.6.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = true

[dependencies]
ccp-shared.workspace = true

futures.workspace = true
sha3.workspace = true
